--- a/average.html
+++ b/average.html
@@ -4,9 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ผลลัพธ์ค่าเฉลี่ย</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet" />
   <style>
-    /* เพิ่มเติมเฉพาะหน้า average */
+    * { box-sizing: border-box; }
+    html, body {
+      margin: 0; padding: 0;
+      font-family: 'Sarabun', sans-serif;
+      height: 100vh;
+      background: linear-gradient(135deg, #323232, #1a1a1a);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      overflow: hidden;
+      position: relative;
+    }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-image: url('bg.webp');
+      background-size: cover;
+      background-position: center;
+      filter: blur(5px) brightness(0.5);
+      z-index: -2;
+    }
+    #particles {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      pointer-events: none;
+    }
+    #resultImage {
+      max-width: 200px;
+      border-radius: 15px;
+      box-shadow: 0 0 25px rgba(255, 215, 0, 0.5);
+      margin-bottom: 15px;
+      transition: transform 0.3s ease;
+      z-index: 1;
+    }
+    #resultImage:hover {
+      transform: scale(1.05);
+    }
     #avgResult {
       font-size: 2.5rem;
       margin-bottom: 20px;
@@ -20,17 +64,11 @@
       color: #fff;
       text-shadow: 0 2px 4px rgba(0,0,0,0.6);
       animation: pulse 2.5s ease-in-out infinite;
+      max-width: 90vw;
     }
-    #resultImage {
-      max-width: 200px;
-      border-radius: 15px;
-      box-shadow: 0 0 25px rgba(255, 215, 0, 0.5);
-      margin-bottom: 15px;
-      transition: transform 0.3s ease;
-      cursor: default;
-    }
-    #resultImage:hover {
-      transform: scale(1.05);
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.04); opacity: 0.9; }
     }
     .floating-btn {
       position: fixed;
@@ -54,10 +92,6 @@
     }
     #homeBtn { right: 20px; }
     #fullscreenBtn { left: 20px; }
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.04); opacity: 0.9; }
-    }
     @keyframes float {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
@@ -71,7 +105,7 @@
 </head>
 <body>
   <canvas id="particles"></canvas>
-  <div style="text-align:center; position: relative; z-index:10;">
+  <div>
     <img id="resultImage" src="" alt="" />
     <div id="avgResult">กำลังโหลด...</div>
     <div class="message" id="messageText"></div>
@@ -81,7 +115,34 @@
   <div id="fullscreenBtn" class="floating-btn" onclick="openFullscreen()">📱</div>
 
   <script>
-    // ฟังก์ชันเปิดเต็มจอ
+    const urlParams = new URLSearchParams(window.location.search);
+    const result = parseFloat(urlParams.get('result'));
+    const avgEl = document.getElementById('avgResult');
+    const imgEl = document.getElementById('resultImage');
+    const msgEl = document.getElementById('messageText');
+
+    if (!isNaN(result)) {
+      avgEl.innerText = `ค่าเฉลี่ยออเดอร์ต่อวัน: ${result.toFixed(8)}`;
+
+      if (result >= 12.00) {
+        const options = [
+          { img: "1(10).png", text: "ก็ทำได้หนิหว่า มา!! ชนแก้ว !!" },
+          { img: "1 (2).png", text: "เป็นคนดีนี้น่า" }
+        ];
+        const choice = options[Math.floor(Math.random() * options.length)];
+        imgEl.src = choice.img;
+        msgEl.innerText = choice.text;
+      } else if (result < 1) {
+        imgEl.src = "1 (3).png";
+        msgEl.innerText = "ต่ำไปนะ พยายามอีกหน่อย!";
+      } else {
+        imgEl.src = "1 (1).png";
+        msgEl.innerText = "ดีขึ้นให้ได้นะ";
+      }
+    } else {
+      avgEl.innerText = "ไม่พบข้อมูลค่าเฉลี่ย";
+    }
+
     function openFullscreen() {
       const docElm = document.documentElement;
       if (docElm.requestFullscreen) {
@@ -94,37 +155,6 @@
         docElm.msRequestFullscreen();
       }
       screen.orientation.lock('landscape').catch(() => {});
-    }
-
-    // อ่านค่า result จาก URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const result = parseFloat(urlParams.get('result'));
-    const avgEl = document.getElementById('avgResult');
-    const imgEl = document.getElementById('resultImage');
-    const msgEl = document.getElementById('messageText');
-
-    if (!isNaN(result)) {
-      avgEl.innerText = `ค่าเฉลี่ยออเดอร์ต่อวัน: ${result.toFixed(8)}`;
-
-      if (result >= 12) {
-        const options = [
-          { img: "1(10).png", text: "ก็ทำได้หนิหว่า มา!! ชนแก้ว !!" },
-          { img: "1 (2).png", text: "เป็นคนดีนี้น่า" }
-        ];
-        const choice = options[Math.floor(Math.random() * options.length)];
-        imgEl.src = choice.img;
-        msgEl.innerText = choice.text;
-      } else if (result < 1) {
-        imgEl.src = "1 (1).png";
-        msgEl.innerText = "ดีขึ้นให้ได้นะ";
-      } else {
-        imgEl.src = "";  // ภาพว่าง
-        msgEl.innerText = "";
-      }
-    } else {
-      avgEl.innerText = "ไม่พบข้อมูลค่าเฉลี่ย";
-      imgEl.src = "";
-      msgEl.innerText = "";
     }
 
     // particle effect
@@ -147,4 +177,4 @@
         particles.push({
           x: Math.random() * w,
           y: Math.random() * h,
-          r: Math.random() * 2 + 1
+          r: Math.random() * 2 + 1,
